# Akvo-DjangoFormGateway

./: README.md  docker-compose.ci.yml  docker-compose.yml  release.sh  setup.cfg  tox.ini
.github/workflows/: test.yml
dev/backend/: requirements.txt  start.sh  test.sh
dev/backend/backend/: settings.py  urls.py
dev/backend/backend/source/forms/: 1.json
dev/db/script/: test-clean.sh
src/AkvoDjangoFormGateway/: constants.py  feed.py  models.py  serializers.py  urls.py  views.py
src/AkvoDjangoFormGateway/management/commands/: fake_data_seeder.py  form_seeder.py
src/AkvoDjangoFormGateway/migrations/: 0001_initial.py
src/AkvoDjangoFormGateway/tests/: tests_data_endpoint.py  tests_data_serializers.py  tests_form_serializer.py  tests_geo_question.py  tests_init.py  tests_seeder_command.py  tests_twilio_endpoint.py  tests_twilio_instance_endpoint.py  tests_validation.py
src/AkvoDjangoFormGateway/utils/: functions.py  services.py  validation.py
