[metadata]
version = attr: AkvoDjangoFormGateway.__version__
license_files = LICENSE

[flake8]
# Flake plugins:
max-line-length = 79
max-complexity = 6
inline-quotes = single
accept-encodings = utf-8
isort-show-traceback = True
# Excluding some directories:
exclude = .git,.tox,__pycache__,setup.py

[tool.black]
line-length = 79
